# m3

./: .gitignore  CMakeLists.txt  README.md  m3.ccm  m3i.sh
test/: CMakeLists.txt  benchmark.cpp  test_mat.cpp  test_qua.cpp  test_utils.cpp  test_vec.cpp
test/svd_demo/: main.cpp
